# highcharts-studio

./: .git-blame-ignore-revs  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  LICENSE  NOTICE  README.md  highcharts_builder.py  highcharts_component.py  pyproject.toml  sample_data.py  streamlit_app.py
.claude/: settings.json
.claude/hooks/: guard_paths.py  post_edit_py.py  pytest_stop.py
.github/scripts/: release.py
.github/workflows/: ci.yml
.streamlit/: config.toml
docs/: chart-types.md
tests/: conftest.py  test_hooks.py  test_packaging.py  test_release.py  test_smoke.py
