[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "highcharts-studio"
version = "0.1.0"
description = "Streamlit application for building data visualizations with Highcharts."
requires-python = ">=3.12"
dependencies = [
    "highcharts-core>=1.10.3",
    "pandas>=2.2.0",
    # Pinned to the Streamlit version this app is developed and CI-tested
    # against; it also relies on recent APIs (st.iframe, st.badge, st.pills,
    # st.segmented_control, st.context.theme, width/height="stretch", and the
    # [theme.light]/[theme.dark] split themes in .streamlit/config.toml). The
    # 1.57.0 floor already covers them all — the newest is [theme.light]/
    # [theme.dark] (1.51.0); st.context.theme landed in 1.46.0 and container
    # height="stretch" in 1.48.0.
    "streamlit>=1.57.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff==0.15.17",
    "ty==0.0.49",
    "watchdog>=6.0.0",
]

# This project ships a Streamlit app, not an importable package, so tell
# Hatchling it's fine to build an empty wheel (otherwise `uv sync` fails
# trying to determine which files to ship).
[tool.hatch.build.targets.wheel]
bypass-selection = true

[tool.ruff.lint]
# Balanced set, not "ALL" (which fights this app's deliberate design).
# E501 is ignored: the formatter owns line length. target-version auto-infers
# py312 from requires-python.
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.ruff.format]
# Defaults are correct (line length 88, double quotes). Table kept as an
# explicit anchor for any future formatter settings.

[tool.ty]
# Defaults are a good baseline: ty infers the py312 target from requires-python
# (like Ruff), and stray highcharts-core stub mismatches are suppressed inline
# (`# ty: ignore[rule]`), not downgraded here. Anchor for future ty settings.
