[build-system]
# >=1.27 for PEP 639 support: the [project].license SPDX string + license-files
# below are only honored (and emitted into the wheel metadata) by hatchling 1.27+.
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "highcharts-studio"
version = "0.17.0"
description = "Streamlit application for building data visualizations with Highcharts."
# SPDX expression (PEP 639). Covers this project's own code only; the Highcharts
# JS/export server and the highcharts-core wrapper are proprietary and
# separately licensed — see the NOTICE file's third-party notice and the README.
# LICENSE is kept as pristine MIT (notice lives in NOTICE) so GitHub's license
# detector classifies the repo as "MIT" rather than "Other".
license = "MIT"
license-files = ["LICENSE", "NOTICE"]
# The README header badges advertise these version floors — "Python 3.12+"
# mirrors requires-python, "Streamlit 1.57+" the streamlit floor below — so
# test_readme_badges_stay_in_sync_with_project pins each badge to them (a bump
# here that leaves a badge stale fails that test).
requires-python = ">=3.12"
dependencies = [
    "highcharts-core>=1.10.3",
    "pandas>=2.2.0",
    # Pinned to the Streamlit version this app is developed and CI-tested
    # against; it also relies on recent APIs (st.iframe, st.badge, st.pills,
    # st.multiselect, st.toggle, st.segmented_control, st.context.theme,
    # width/height="stretch", bordered st.metric KPI cards in an
    # st.container(horizontal=True) row, and the [theme.light]/[theme.dark]
    # split themes in .streamlit/config.toml). The 1.57.0 floor already covers
    # them all — the most recent are the [theme.light]/[theme.dark] split
    # (1.51.0) and the 1.48.0 layout APIs (horizontal flex containers,
    # container height="stretch"); st.context.theme landed in 1.46.0.
    "streamlit>=1.57.0",
]

[dependency-groups]
# These also power the local Claude Code hooks in .claude/hooks/ (ruff + ty on
# edit, pytest on stop), not just CI — see CLAUDE.md > Hooks.
dev = [
    "pytest>=8.0",
    "ruff==0.15.17",
    "ty==0.0.49",
    "watchdog>=6.0.0",
]

# This project ships a Streamlit app, not an importable package, so tell
# Hatchling it's fine to build an empty wheel (otherwise `uv sync` fails
# trying to determine which files to ship). The wheel still carries the LICENSE
# and NOTICE plus the license metadata (see [project].license / license-files
# above) — it just ships no code modules.
[tool.hatch.build.targets.wheel]
bypass-selection = true

[tool.ruff.lint]
# Balanced set, not "ALL" (which fights this app's deliberate design).
# E501 is ignored: the formatter owns line length. target-version auto-infers
# py312 from requires-python. `.claude/hooks/*.py` isn't excluded (dot-dirs
# aren't in Ruff's default excludes), so the hook scripts are linted too.
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.ruff.format]
# Defaults are correct (line length 88, double quotes). Table kept as an
# explicit anchor for any future formatter settings.

[tool.ty]
# Defaults are a good baseline: ty infers the py312 target from requires-python
# (like Ruff), and stray highcharts-core stub mismatches are suppressed inline
# (`# ty: ignore[rule]`), not downgraded here. `ty check` also type-checks the
# `.claude/hooks/` scripts (they're part of the project tree). Anchor for future
# ty settings.
